[gd_scene load_steps=4 format=3 uid="uid://bkitg7eigb4o"]

[ext_resource type="Script" path="res://components/hauntable_component.gd" id="1_wivry"]
[ext_resource type="PackedScene" uid="uid://dikgr2ldyjqsw" path="res://haunt/haunt_ui.tscn" id="2_6mjw2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_20m3x"]
size = Vector2(16, 16)

[node name="HauntableComponent" type="Area2D" groups=["hauntable"]]
collision_layer = 4
script = ExtResource("1_wivry")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_20m3x")

[node name="HauntUI" parent="." instance=ExtResource("2_6mjw2")]
visible = false
custom_minimum_size = Vector2(64, 32)
anchors_preset = 15
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 1

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="haunted" from="HauntUI" to="." method="_on_haunt_ui_haunted"]
[connection signal="selected" from="HauntUI" to="." method="_on_haunt_ui_selected"]
